syntax="proto3";
package eos.console;

message FindProto {
    bool Files = 1;
    bool Directories = 2;
    bool Zerosizefiles = 3;
    bool Count = 4;
    bool Balance = 5;
    bool Onehourold = 6;
    bool Stripediff = 7;
    bool Faultyacl = 8;
    bool Xurl = 9;
    bool Childcount = 10;
    bool Silent = 11;
    bool Mixedgroups = 12;
    bool Size = 13;
    bool Fs = 14;
    bool Checksum= 15;
    bool Ctime = 16;
    bool Mtime = 17;
    bool Fid = 18;
    bool Nrep = 19;
    bool Online = 20;
    bool Fileinfo = 21;
    bool Nunlink = 22;
    bool PrintUid = 23;
    bool PrintGid = 24;
    bool SearchUid = 25;
    bool SearchNotUid = 26;
    bool SearchGid = 27;
    bool SearchNotGid = 28;
    bool Hosts = 29;
    bool Partition= 30;
    bool DoLayoutstripes = 31;

    uint64 Layoutstripes = 32;
    uint64 Maxdepth = 33;
    uint64 Youngerthan = 34;
    uint64 Olderthan = 35;
    uint64 Uid = 36;
    uint64 Gid = 37;

    string Purge = 38;
    string Path = 39;
    string Name = 40;
    string AttributeKey = 41;
    string AttributeValue = 42;
    string Printkey = 43;
}